@@ -25,7 +25,7 @@
 #define HAVE_ISNAN
 
 #include <math.h>
-#ifdef _MSC_VER
+#if defined _MSC_VER || defined __MINGW32__
 /* MS C-runtime has functions which can be used in order to determine if
    a given floating-point variable contains NaN, (+-)INF. These are 
    preferred, because floating-point technology is considered propriatary
@@ -87,14 +87,6 @@ static int isnan (double d) {
 #define HAVE_STRING_H
 
 #include <libxml/xmlversion.h>
-
-#if !defined LIBXSLT_PUBLIC
-#if defined _MSC_VER && !defined IN_LIBXSLT && !defined LIBXSLT_STATIC
-#define LIBXSLT_PUBLIC __declspec(dllimport)
-#else
-#define LIBXSLT_PUBLIC 
-#endif
-#endif
 
 #ifndef ATTRIBUTE_UNUSED
 #define ATTRIBUTE_UNUSED
